Update age colour palette

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -75,79 +75,79 @@
           <dd>
             <ul class="data-legend">
               <li>
-                <span class="key" style="background: #fcfcb8">-</span>
+                <span class="key" style="background: #f0eaba">-</span>
                 &gt;=2000
               </li>
               <li>
-                <span class="key" style="background: #fee9a5">-</span>
+                <span class="key" style="background: #fae269">-</span>
                 1980-2000
               </li>
               <li>
-                <span class="key" style="background: #fec580">-</span>
+                <span class="key" style="background: #fbaf27">-</span>
                 1960-1980
               </li>
               <li>
-                <span class="key" style="background: #ffb63c">-</span>
+                <span class="key" style="background: #e6711d">-</span>
                 1940-1960
               </li>
               <li>
-                <span class="key" style="background: #ff7e3e">-</span>
+                <span class="key" style="background: #d73d3a">-</span>
                 1920-1940
               </li>
               <li>
-                <span class="key" style="background: #ff5353">-</span>
+                <span class="key" style="background: #ba221c">-</span>
                 1900-1920
               </li>
               <li>
-                <span class="key" style="background: #df73ff">-</span>
+                <span class="key" style="background: #bb859b">-</span>
                 1880-1900
               </li>
               <li>
-                <span class="key" style="background: #b81ae7">-</span>
+                <span class="key" style="background: #8b3654">-</span>
                 1860-1880
               </li>
               <li>
-                <span class="key" style="background: #8400a8">-</span>
+                <span class="key" style="background: #8f5385">-</span>
                 1840-1860
               </li>
               <li>
-                <span class="key" style="background: #73ffdf">-</span>
+                <span class="key" style="background: #56619b">-</span>
                 1820-1840
               </li>
               <li>
-                <span class="key" style="background: #00ffc5">-</span>
+                <span class="key" style="background: #6793b2">-</span>
                 1800-1820
               </li>
               <li>
-                <span class="key" style="background: #00c5ff">-</span>
+                <span class="key" style="background: #83c3b3">-</span>
                 1780-1800
               </li>
               <li>
-                <span class="key" style="background: #73b2ff">-</span>
+                <span class="key" style="background: #adc88f">-</span>
                 1760-1780
               </li>
               <li>
-                <span class="key" style="background: #00a9e6">-</span>
+                <span class="key" style="background: #83a663">-</span>
                 1740-1760
               </li>
               <li>
-                <span class="key" style="background: #0070ff">-</span>
+                <span class="key" style="background: #77852d">-</span>
                 1720-1740
               </li>
               <li>
-                <span class="key" style="background: #004da8">-</span>
+                <span class="key" style="background: #69814e">-</span>
                 1700-1720
               </li>
               <li>
-                <span class="key" style="background: #897044">-</span>
+                <span class="key" style="background: #d0c291">-</span>
                 1680-1700
               </li>
               <li>
-                <span class="key" style="background: #894444">-</span>
+                <span class="key" style="background: #918158">-</span>
                 1660-1680
               </li>
               <li>
-                <span class="key" style="background: #4c0073">-</span>
+                <span class="key" style="background: #7a5732">-</span>
                 &lt;1660
               </li>
             </ul>
