Add UCL RSDG acknowledgement

--- a/html/supporters.html
+++ b/html/supporters.html
@@ -57,6 +57,9 @@
 <p>UCL Institute for Environmental Design and Engineering</p>
 <p>UCL Survey of London</p>
 <p>UCL Energy Institute</p>
+<p><a href="https://www.ucl.ac.uk/resarch-it-services/research-software-development">
+    UCL Research Software Development Group
+</a></p>
 
 <h2 class="h2">Project Team</h2>
 
