--- a/html/index.html
+++ b/html/index.html
@@ -54,8 +54,7 @@ before we launch next year. Just add your knowledge to make the buildings colour
 
 </p>
 
-<a class="btn btn-center btn-bold" href="https://beta.colouring.london">Start Testing Here!</a>
-
+<a class="btn btn-center btn-bold" href="#" disabled> Our server is taking a break this weekend 🏖️Please come back Tuesday to help us test Colouring London </a>
 </div>
 <section class="pale-grey">
 <div class="main-col">
@@ -69,6 +68,7 @@ before we launch next year. Just add your knowledge to make the buildings colour
     href="https://tinyletter.com/colouringlondon/archive"
     target="_blank">newsletter archive</a>.
 
+        
     </p>
     <label for="tlemail">Enter your email address:</label>
     <input class="form-control" type="email" name="email" id="tlemail" placeholder="name@example.com" />
