--- a/html/index.html
+++ b/html/index.html
@@ -54,8 +54,7 @@ before we launch next year. Just add your knowledge to make the buildings colour
 
 </p>
 
-<a class="btn btn-center btn-bold" href="#" disabled> Our server is taking a break this weekend 🏖️Please come back Tuesday to help us test Colouring London </a>
-</div>
+<a class="btn btn-center btn-bold" href="https://beta.colouring.london">Start Testing Here!</a></div>
 <section class="pale-grey">
 <div class="main-col">
 <form id="sign-up" action="https://tinyletter.com/colouringlondon" method="post" target="popupwindow"
